// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/mentions/demo/async.md extend context correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    class="rc-textarea"
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/autoSize.md extend context correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    class="rc-textarea"
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/basic.md extend context correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    class="rc-textarea"
    rows="1"
  >
    @afc163
  </textarea>
</div>
`;

exports[`renders ./components/mentions/demo/form.md extend context correctly 1`] = `
<form
  class="ant-form ant-form-horizontal"
>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class=""
        for="coders"
        title="Top coders"
      >
        Top coders
      </label>
    </div>
    <div
      class="ant-col ant-col-16 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-mentions"
          >
            <textarea
              class="rc-textarea"
              id="coders"
              rows="1"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-6 ant-form-item-label"
    >
      <label
        class="ant-form-item-required"
        for="bio"
        title="Bio"
      >
        Bio
      </label>
    </div>
    <div
      class="ant-col ant-col-16 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <div
            class="ant-mentions"
          >
            <textarea
              class="rc-textarea"
              id="bio"
              placeholder="You can use @ to ref user here"
              rows="3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-row ant-form-item"
  >
    <div
      class="ant-col ant-col-14 ant-col-offset-6 ant-form-item-control"
    >
      <div
        class="ant-form-item-control-input"
      >
        <div
          class="ant-form-item-control-input-content"
        >
          <button
            class="ant-btn ant-btn-primary"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
             
          <button
            class="ant-btn"
            type="button"
          >
            <span>
              Reset
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`renders ./components/mentions/demo/placement.md extend context correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    class="rc-textarea"
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/prefix.md extend context correctly 1`] = `
<div
  class="ant-mentions"
  style="width:100%"
>
  <textarea
    class="rc-textarea"
    placeholder="input @ to mention people, # to mention tag"
    rows="1"
  />
</div>
`;

exports[`renders ./components/mentions/demo/readonly.md extend context correctly 1`] = `
Array [
  <div
    style="margin-bottom:10px"
  >
    <div
      class="ant-mentions ant-mentions-disabled"
      style="width:100%"
    >
      <textarea
        class="rc-textarea rc-textarea-disabled"
        disabled=""
        placeholder="this is disabled Mentions"
        rows="1"
      />
    </div>
  </div>,
  <div
    class="ant-mentions"
    style="width:100%"
  >
    <textarea
      class="rc-textarea"
      placeholder="this is readOnly Mentions"
      readonly=""
      rows="1"
    />
  </div>,
]
`;

exports[`renders ./components/mentions/demo/status.md extend context correctly 1`] = `
<div
  class="ant-space ant-space-vertical"
>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="ant-mentions ant-mentions-has-error"
      style="width:100%"
    >
      <textarea
        class="rc-textarea"
        rows="1"
      >
        @afc163
      </textarea>
    </div>
  </div>
  <div
    class="ant-space-item"
    style="margin-bottom:8px"
  >
    <div
      class="ant-mentions ant-mentions-has-warning"
      style="width:100%"
    >
      <textarea
        class="rc-textarea"
        rows="1"
      >
        @afc163
      </textarea>
    </div>
  </div>
  <div
    class="ant-space-item"
  >
    <div
      class="ant-row ant-form-item ant-form-item-has-feedback ant-form-item-has-error"
    >
      <div
        class="ant-col ant-form-item-control"
      >
        <div
          class="ant-form-item-control-input"
        >
          <div
            class="ant-form-item-control-input-content"
          >
            <div
              class="ant-mentions-affix-wrapper ant-mentions-affix-wrapper-has-error ant-mentions-affix-wrapper-has-feedback"
            >
              <div
                class="ant-mentions ant-mentions-has-error ant-mentions-has-feedback"
                style="width:100%"
              >
                <textarea
                  class="rc-textarea"
                  rows="1"
                >
                  @afc163
                </textarea>
              </div>
              <span
                class="ant-mentions-feedback-icon"
              >
                <span
                  aria-label="close-circle"
                  class="anticon anticon-close-circle"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close-circle"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
